# Quantum_Demo

./: README.md
Demo_shors/: main_bv.py  main_cloud.py  pyproject.toml
Private-quantum-simulator/: .gitignore  Dockerfile.backend  Dockerfile.fronend  README.md  docker-compose.yml  env.local  main.py  middleware.ts  next.config.mjs  package.json  pyproject.toml  qiskit_api.py  tailwind.config.js
Private-quantum-simulator/app/: globals.css  layout.tsx  page.tsx
Private-quantum-simulator/app/dashboard/: page.tsx
Private-quantum-simulator/components/: app-shell.tsx  bloch-sphere-visualization.tsx  brand-logo.tsx  circuit-history-panel.tsx  circuit-library-sidebar.tsx  individual-bloch-sphere.tsx  learning-path.tsx  nav-bar.tsx  q-sphere-visualization.tsx  quantum-circuit-builder.tsx  quantum-glossary.tsx  quantum-simulator.tsx  save-circuit-dialog.tsx  theme-provider.tsx  theme-toggle.tsx
Private-quantum-simulator/hooks/: use-circuit-storage.ts
Private-quantum-simulator/lib/: api.ts
